src/objdetect/objdetect.h

// CascadeClassifier
CvStatus CascadeClassifier_New(CascadeClassifier *rval);
CvStatus CascadeClassifier_NewFromFile(char *filename, CascadeClassifier *rval);
CvStatus CascadeClassifier_getFeatureType(CascadeClassifier self, int *rval);
CvStatus CascadeClassifier_getOriginalWindowSize(CascadeClassifier self, Size *rval);
CvStatus CascadeClassifier_isOldFormatCascade(CascadeClassifier self, bool *rval);
void     FaceDetectorYN_Close(FaceDetectorYNPtr self);
CvStatus FaceDetectorYN_Detect(FaceDetectorYN self, Mat img, Mat *faces);
CvStatus FaceDetectorYN_GetInputSize(FaceDetectorYN self, Size *input_size);
CvStatus FaceDetectorYN_GetScoreThreshold(FaceDetectorYN self, float *score_threshold);
CvStatus FaceDetectorYN_GetNMSThreshold(FaceDetectorYN self, float *nms_threshold);