packages/dartcv/lib/src/g/objdetect.g.dart


  ffi.Pointer<CvStatus> CascadeClassifier_Load_Async(
    CascadeClassifier self,
    ffi.Pointer<ffi.Char> name,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_Load_Async(
      self,
      name,
      callback,
    );
  }

  late final _CascadeClassifier_Load_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              ffi.Pointer<ffi.Char>,
              imp1.CvCallback_1)>>('CascadeClassifier_Load_Async');
  late final _CascadeClassifier_Load_Async =
      _CascadeClassifier_Load_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_New(
    ffi.Pointer<CascadeClassifier> rval,
  ) {
    return _CascadeClassifier_New(
      rval,
    );
  }

  late final _CascadeClassifier_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<CascadeClassifier>)>>('CascadeClassifier_New');
  late final _CascadeClassifier_New = _CascadeClassifier_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<CascadeClassifier>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_NewFromFile(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<CascadeClassifier> rval,
  ) {
    return _CascadeClassifier_NewFromFile(
      filename,
      rval,
    );
  }

  late final _CascadeClassifier_NewFromFilePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  ffi.Pointer<ffi.Char>, ffi.Pointer<CascadeClassifier>)>>(
      'CascadeClassifier_NewFromFile');
  late final _CascadeClassifier_NewFromFile =
      _CascadeClassifier_NewFromFilePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<CascadeClassifier>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_NewFromFile_Async(
    ffi.Pointer<ffi.Char> filename,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_NewFromFile_Async(
      filename,
      callback,
    );
  }

  late final _CascadeClassifier_NewFromFile_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
              imp1.CvCallback_1)>>('CascadeClassifier_NewFromFile_Async');
  late final _CascadeClassifier_NewFromFile_Async =
      _CascadeClassifier_NewFromFile_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_New_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_New_Async(
      callback,
    );
  }

  late final _CascadeClassifier_New_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'CascadeClassifier_New_Async');
  late final _CascadeClassifier_New_Async = _CascadeClassifier_New_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_getFeatureType(
    CascadeClassifier self,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _CascadeClassifier_getFeatureType(
      self,
      rval,
    );
  }

  late final _CascadeClassifier_getFeatureTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier,
              ffi.Pointer<ffi.Int>)>>('CascadeClassifier_getFeatureType');
  late final _CascadeClassifier_getFeatureType =
      _CascadeClassifier_getFeatureTypePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_getFeatureType_Async(
    CascadeClassifier self,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_getFeatureType_Async(
      self,
      callback,
    );
  }

  late final _CascadeClassifier_getFeatureType_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier,
              imp1.CvCallback_1)>>('CascadeClassifier_getFeatureType_Async');
  late final _CascadeClassifier_getFeatureType_Async =
      _CascadeClassifier_getFeatureType_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_getOriginalWindowSize(
    CascadeClassifier self,
    ffi.Pointer<CvSize> rval,
  ) {
    return _CascadeClassifier_getOriginalWindowSize(
      self,
      rval,
    );
  }

  late final _CascadeClassifier_getOriginalWindowSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier,
              ffi.Pointer<CvSize>)>>('CascadeClassifier_getOriginalWindowSize');
  late final _CascadeClassifier_getOriginalWindowSize =
      _CascadeClassifier_getOriginalWindowSizePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, ffi.Pointer<CvSize>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_getOriginalWindowSize_Async(
    CascadeClassifier self,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_getOriginalWindowSize_Async(
      self,
      callback,
    );
  }

  late final _CascadeClassifier_getOriginalWindowSize_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  CascadeClassifier, imp1.CvCallback_1)>>(
      'CascadeClassifier_getOriginalWindowSize_Async');
  late final _CascadeClassifier_getOriginalWindowSize_Async =
      _CascadeClassifier_getOriginalWindowSize_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_isOldFormatCascade(
    CascadeClassifier self,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _CascadeClassifier_isOldFormatCascade(
      self,
      rval,
    );
  }

  late final _CascadeClassifier_isOldFormatCascadePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier,
              ffi.Pointer<ffi.Bool>)>>('CascadeClassifier_isOldFormatCascade');
  late final _CascadeClassifier_isOldFormatCascade =
      _CascadeClassifier_isOldFormatCascadePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_isOldFormatCascade_Async(
    CascadeClassifier self,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_isOldFormatCascade_Async(
      self,
      callback,
    );
  }

  late final _CascadeClassifier_isOldFormatCascade_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  CascadeClassifier, imp1.CvCallback_1)>>(
      'CascadeClassifier_isOldFormatCascade_Async');
  late final _CascadeClassifier_isOldFormatCascade_Async =
      _CascadeClassifier_isOldFormatCascade_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, imp1.CvCallback_1)>();

  void FaceDetectorYN_Close(
    FaceDetectorYNPtr self,
  ) {
    return _FaceDetectorYN_Close(
      self,
    );
  }

  late final _FaceDetectorYN_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FaceDetectorYNPtr)>>(
          'FaceDetectorYN_Close');
  late final _FaceDetectorYN_Close =
      _FaceDetectorYN_ClosePtr.asFunction<void Function(FaceDetectorYNPtr)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_Detect(
    FaceDetectorYN self,
    Mat img,
    ffi.Pointer<Mat> faces,
  ) {
    return _FaceDetectorYN_Detect(
      self,
      img,
      faces,
    );
  }

  late final _FaceDetectorYN_DetectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              FaceDetectorYN, Mat, ffi.Pointer<Mat>)>>('FaceDetectorYN_Detect');
  late final _FaceDetectorYN_Detect = _FaceDetectorYN_DetectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(FaceDetectorYN, Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_Detect_Async(
    FaceDetectorYN self,
    Mat img,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceDetectorYN_Detect_Async(
      self,
      img,
      callback,
    );
  }

  late final _FaceDetectorYN_Detect_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN, Mat,
              imp1.CvCallback_1)>>('FaceDetectorYN_Detect_Async');
  late final _FaceDetectorYN_Detect_Async =
      _FaceDetectorYN_Detect_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceDetectorYN, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_GetInputSize(
    FaceDetectorYN self,
    ffi.Pointer<CvSize> input_size,
  ) {
    return _FaceDetectorYN_GetInputSize(
      self,
      input_size,
    );
  }

  late final _FaceDetectorYN_GetInputSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN,
              ffi.Pointer<CvSize>)>>('FaceDetectorYN_GetInputSize');
  late final _FaceDetectorYN_GetInputSize =
      _FaceDetectorYN_GetInputSizePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceDetectorYN, ffi.Pointer<CvSize>)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_GetInputSize_Async(
    FaceDetectorYN self,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceDetectorYN_GetInputSize_Async(
      self,
      callback,
    );
  }

  late final _FaceDetectorYN_GetInputSize_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN,
              imp1.CvCallback_1)>>('FaceDetectorYN_GetInputSize_Async');
  late final _FaceDetectorYN_GetInputSize_Async =
      _FaceDetectorYN_GetInputSize_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_GetNMSThreshold(
    FaceDetectorYN self,
    ffi.Pointer<ffi.Float> nms_threshold,
  ) {
    return _FaceDetectorYN_GetNMSThreshold(
      self,
      nms_threshold,
    );
  }

  late final _FaceDetectorYN_GetNMSThresholdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN,
              ffi.Pointer<ffi.Float>)>>('FaceDetectorYN_GetNMSThreshold');
  late final _FaceDetectorYN_GetNMSThreshold =
      _FaceDetectorYN_GetNMSThresholdPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceDetectorYN, ffi.Pointer<ffi.Float>)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_GetNMSThreshold_Async(
    FaceDetectorYN self,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceDetectorYN_GetNMSThreshold_Async(
      self,
      callback,
    );
  }

  late final _FaceDetectorYN_GetNMSThreshold_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN,
              imp1.CvCallback_1)>>('FaceDetectorYN_GetNMSThreshold_Async');
  late final _FaceDetectorYN_GetNMSThreshold_Async =
      _FaceDetectorYN_GetNMSThreshold_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FaceDetectorYN_GetScoreThreshold(
    FaceDetectorYN self,
    ffi.Pointer<ffi.Float> score_threshold,
  ) {
    return _FaceDetectorYN_GetScoreThreshold(
      self,
      score_threshold,
    );
  }

  late final _FaceDetectorYN_GetScoreThresholdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceDetectorYN,
              ffi.Pointer<ffi.Float>)>>('FaceDetectorYN_GetScoreThreshold');
  late final _FaceDetectorYN_GetScoreThreshold =
      _FaceDetectorYN_GetScoreThresholdPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceDetectorYN, ffi.Pointer<ffi.Float>)>();
